--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,9 +210,17 @@ section {
     overflow: auto
 }
 
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
 .trainer-bio h3 {
     font-size: 32px;
-    margin-bottom: 8px
+    margin-bottom: 8px;
 }
 
 .trainer-bio h4 {
@@ -222,14 +230,6 @@ section {
 }
 
 .trainer-bio p {
-    font-size: 17px;
+    font-size 17px;
     line-height: 1.3;
-}
-
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
 }
