--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,3 +284,19 @@ section {
 }
 
 /* Reach Out Styles End*/
+
+/* homepage hero */
+.hero {
+    margin: 20px;
+    background-color: white;
+    font-size: 20px;
+    color: blue;
+}
+
+/* secondary page hero */
+.hero-secondary {
+    margin: 20px;
+    background-color: black;
+    font-size: 20px;
+    color: red;
+}
