--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,17 +55,18 @@ footer {
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 footer h2 {
-    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
 
 footer div {
-    float: right;
     line-height: 1.5;
     text-align: right;
 }
@@ -81,10 +82,11 @@ section {
 /* Hero Style Start */
 .hero {
     background-image: url(https://static.fullstack-bootcamp.com/module-2/flipped-hero-image.jpg);
-    height: 600px;
     background-size: cover;
     background-position: center;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 /* Hero Style End */
 
@@ -92,11 +94,9 @@ section {
     border: 3px solid #024e76;
     background-color: #fce138;
     padding: 20px;
-    width: 500px;
     color: #024e76;
-    position: absolute;
-    bottom: 120px;
-    right: 140px;
+    width: 40%
+    margin: 3.5%;
 }
 
 .hero-form h3 {
@@ -128,6 +128,21 @@ section {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+}
+
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+
+.her0-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
 }
 /* HERO STYLES END */
 
