add flexbox to the hero

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ section {
     background-color: #fce138;
     padding: 20px;
     color: #024e76;
-    width: 40%
+    width: 40%;
     margin: 3.5%;
 }
 
