added flexbox to section title/css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,20 +146,16 @@ section {
 }
 /* HERO STYLES END */
 
-.intro {
-    text-align: center;
-}
-
 .intro p{
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -194,6 +190,10 @@ section {
     padding: 0 100px 20px 100px;
     display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -205,7 +205,6 @@ section {
 }
 
 .trainers {
-    text-align: center;
     overflow: auto;
 }
 
@@ -238,6 +237,10 @@ section {
     text-align: right;
 }
 
+.flex-row {
+    display: flex;
+}
+
 .trainer-bio h3 {
     font-size: 32px;
     margin-bottom: 8px;
@@ -256,16 +259,12 @@ section {
 
 .section-title {
     font-size: 55px;
-    display: inline-block;
-    padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
-    margin-bottom: 35px;
     color: #024e76;
 }
 
 /* Reach Out Styles Start */
 .contact {
-    text-align: center;
     background: #024e76;
 }
 
