--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,27 +230,29 @@ section {
 
 .trainers {
     overflow: auto;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .trainer {
-    width: 900px;
-    margin: 0 auto 30px auto;
+    margin: 0 auto 20px auto;
     background: #024e76;
     color: #fce138;
-    overflow: auto;
+    flex: 1;
 }
 
 .trainer img {
-    width: 35%;
-    float: left;
+    width: 100%;
     overflow: auto;
 }
 
 .trainer-bio {
-    padding:35px;
-    float: left;
-    width: 65%;
-    overflow: auto
+    padding: 25px;
+    overflow: auto;
+    line-height: 1.3;
 }
 
 .text-left {
@@ -266,19 +268,17 @@ section {
 }
 
 .trainer-bio h3 {
-    font-size: 32px;
-    margin-bottom: 8px;
+    font-size: 28px;
 }
 
 .trainer-bio h4 {
     font-weight: lighter;
-    font-size: 26px;
-    margin-bottom: 25px;
+    font-size: 22px;
+    margin-bottom: 15px;
 }
 
 .trainer-bio p {
     font-size: 17px;
-    line-height: 1.3;
 }
 
 .section-title {
