add media queries to CSS amd meta to HTML

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ header nav ul li{
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -87,6 +87,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 /* Hero Style End */
 
@@ -136,7 +137,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .her0-cta h2 {
@@ -208,7 +209,7 @@ section {
 }
 
 .section-title{
-    font-size: 55px;
+    font-size: 48px;
     color: #024376;
     margin-bottom: 35px;
     padding: 0 100px 20px 100px;
@@ -368,4 +369,20 @@ section {
     background-color: black;
     font-size: 20px;
     color: red;
+}
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+    
+}
+
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width: 768px) {
+    
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+    
 }
