--- a/assets/css/secondary-styles.css
+++ b/assets/css/secondary-styles.css
@@ -4,52 +4,40 @@
     text-align: center;
     margin-bottom: 40px;
   }
-
-  .hero {
-      background-image: url(../images/assets/images/hero-bg.jpg);
-      background-size: cover;
-      background-position: bottom;
-      position: relative;
-      height: auto;
-      text-align: center;
-      margin-bottom: 40px;
-  }
-
+  
   .page-title {
-      color: #fce138;
-      display: inline-block;
-      border-bottom: 4px solid color #fce138;
-      padding: top 0, right 80px, bottom 15px, left 80px;
-      font-weight: normal;
-      font-size: 42px;
-      font-style: italic;
+    color: #fce138;
+    display: inline-block;
+    border-bottom: 4px solid #fce138;
+    padding: 0 80px 15px 80px;
+    font-weight: normal;
+    font-size: 42px;
+    font-style: italic;
   }
-
-.secondary-content {
+  
+  .secondary-content {
     width: 80%;
-    margin: auto;
-}
-
-.article {
-    color: #024e76
-}
-
-.secondary-content h3 {
+    margin: 0 auto;
+    color: #024e76;
+  }
+  
+  .secondary-content h3 {
     font-size: 25px;
-    margin: 20px 0 0 20px;
-}
-
-.secondary-content p {
+    margin: 20px 0;
+  }
+  
+  .secondary-content p {
     font-size: 16px;
     line-height: 1.5;
-    margin: 20px 0 0 20px;
-}
-
-.secondary-content ul {
-    margin: 15px 20px 15px 20px;
-}
-
-.secondary-content li{
+    margin: 20px 0;
+  }
+  
+  .secondary-content ul {
+    margin: 15px 20px;
+  }
+  
+  .secondary-content li {
     color: #39a6b2;
-    margin: 10px 0 10px 0;
-}
+    margin: 10px 0;
+  }
+  
